TODO
* look into supporting input buffer == output buffer for optimization
* CCM add separate function for authentication data support
* implement libcaes_crypt_cfb; complete CFB suport
* add OFB suport ?
* add restriction that context should be used in the mode the keys were set ?
  does not work for CCM

Tests:
* integrate test runner into tests
* add pycaes ECB and XTS encryption tests
* add tests
  - CFB
  - OFB ?
  - XTS (add more test vectors?) 256-bit
  - make sure to test non-16 byte aligned data for the different implementations

20130331
* see `git log' for more recent change log
* Initial stand-alone version based on earlier work
