@@ -2,7 +2,7 @@ AC_PREREQ([2.71])
 
 AC_INIT(
  [libcaes],
- [20230107],
+ [20230406],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
