@@ -1,12 +1,17 @@
 TODO
 * look into supporting input buffer == output buffer for optimization
 * CCM add separate function for authentication data support
-* implement libcaes_crypt_cfb; complete CFB suport
 * add OFB suport ?
 * add restriction that context should be used in the mode the keys were set ?
   does not work for CCM
 
+complete CFB suport
+* implement libcaes_crypt_cfb
+* add API function
+* add fuzz target
+
 Tests:
+* move crypt tests into context
 * integrate test runner into tests
 * add pycaes ECB and XTS encryption tests
 * add tests
